force-app/main/default/objects/Automated_Merge_Setting__mdt/Automated_Merge_Setting__mdt.object-meta.xml
<CustomObject>
    <description>For csuoee__ functions, formulas for object/fields for merging.</description>
    <label>Automated Merge Setting</label>
    <pluralLabel>Automated Merge Settings</pluralLabel>
</CustomObject>