force-app/main/default/objects/Automated_Merge_Setting__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>The field that this rule applies to.</description>
    <inlineHelpText>The field that this rule applies to.</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>