force-app/main/default/objects/Automated_Merge_Setting__mdt/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <description>The formula to apply to the field.</description>
    <inlineHelpText>The formula to apply to the field.</inlineHelpText>
    <label>Formula</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>