force-app/main/default/objects/Automated_Merge_Setting__mdt/fields/Formula_Ext1__c.field-meta.xml
<CustomField>
    <fullName>Formula_Ext1__c</fullName>
    <description>Extenion (if required) for your formula storage.</description>
    <inlineHelpText>Extenion (if required) for your formula storage.</inlineHelpText>
    <label>Formula Ext1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>