force-app/main/default/objects/Automated_Merge_Setting__mdt/fields/Formula_Ext2__c.field-meta.xml
<CustomField>
    <fullName>Formula_Ext2__c</fullName>
    <description>Extension (if required) for your formula.</description>
    <inlineHelpText>Extension (if required) for your formula.</inlineHelpText>
    <label>Formula Ext2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>