force-app/main/default/objects/Automated_Merge_Setting__mdt/fields/Master_Record_Formula__c.field-meta.xml
<CustomField>
    <fullName>Master_Record_Formula__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this is part of the formula to determine the master record.</description>
    <inlineHelpText>If checked, this is part of the formula to determine the master record.</inlineHelpText>
    <label>Master Record Formula</label>
    <type>Checkbox</type>
</CustomField>