force-app/main/default/objects/Automated_Merge_Setting__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Name of the object e.g. csuoee__Instructor__c these formulas apply to.</description>
    <inlineHelpText>Name of the object e.g. csuoee__Instructor__c these formulas apply to.</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>